# Conways_game

./: Cargo.toml  README.md
src/: config.rs  conway.rs  main.rs
src/cell/: cell.rs
templates/: page.html
